--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "resume",
-	"version": "0.1.0",
-	"private": true,
+	"name": "cv",
+    "version": "0.1.0",
+    "homepage": "https://carloslira.github.io/cv/",
 	"dependencies": {
 		"classnames": "^2.2.6",
 		"i18next": "^12.0.0",
@@ -19,7 +19,9 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+        "test": "react-scripts test",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
@@ -30,5 +32,8 @@
 		"not dead",
 		"not ie <= 11",
 		"not op_mini all"
-	]
+	],
+	"devDependencies": {
+		"gh-pages": "^2.0.1"
+	}
 }
