--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-	"name": "cv",
-	"version": "0.1.0",
-	"homepage": "https://carloslira.github.io/cv/",
-	"dependencies": {
-		"classnames": "^2.2.6",
-		"i18next": "^12.0.0",
-		"i18next-browser-languagedetector": "^2.2.3",
-		"i18next-xhr-backend": "^1.5.1",
-		"mdi-react": "^4.4.0",
-		"react": "^16.6.0",
-		"react-dom": "^16.6.0",
-		"react-flexbox-grid": "^2.1.2",
-		"react-i18next": "^8.3.5",
-		"react-jss": "^8.6.1",
-		"react-router-dom": "^4.3.1",
-		"react-scripts": "2.0.5"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	],
-	"devDependencies": {
-		"gh-pages": "^2.0.1"
-	}
+    "name": "cv",
+    "version": "0.1.0",
+    "homepage": "https://carloslira.github.io/cv/",
+    "dependencies": {
+        "classnames": "^2.2.6",
+        "i18next": "^12.0.0",
+        "i18next-browser-languagedetector": "^2.2.3",
+        "i18next-xhr-backend": "^1.5.1",
+        "mdi-react": "^4.4.0",
+        "react": "^16.6.0",
+        "react-dom": "^16.6.0",
+        "react-flexbox-grid": "^2.1.2",
+        "react-i18next": "^8.3.5",
+        "react-jss": "^8.6.1",
+        "react-router-dom": "^4.3.1",
+        "react-scroll": "^1.7.10",
+        "react-sticky-box": "^0.7.5"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "devDependencies": {
+        "gh-pages": "^2.0.1",
+        "react-scripts": "2.0.5"
+    }
 }
